<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAFFFFFF"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".splash.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_login_fied"
                android:textColor="#080808"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password_fied"
                android:password="true"
                android:textColor="#080808"
                android:textSize="20sp" />

        </android.support.design.widget.TextInputLayout>

        <com.rey.material.widget.Button
            android:id="@+id/loginDoneBtn"
            style="@style/Material.Drawable.Ripple.Touch.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:padding="15dp"
            android:text="@string/done_btn"
            android:textSize="25sp"
            app:rd_cornerRadius="7dp"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleAnimDuration="300" />

    </LinearLayout>

</RelativeLayout>
