<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".splash.SplashActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.rubyko.mainapp.login.view.CustomizeTextField
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="6dp"
            app:mtf_image="@drawable/ic_account_circle_black_48dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_login_fied"
                android:textColor="#080808"
                android:textSize="20sp" />

        </com.rubyko.mainapp.login.view.CustomizeTextField>

        <com.rubyko.mainapp.login.view.CustomizeTextField
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:mtf_image="@drawable/ic_fingerprint_black_24dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_password_fied"
                android:password="true"
                android:textColor="#080808"
                android:textSize="20sp" />

        </com.rubyko.mainapp.login.view.CustomizeTextField>

        <com.rey.material.widget.Button
            style="@style/Material.Drawable.Ripple.Touch.Light"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/regisrBtn"
            android:text="@string/done_btn"
            android:textSize="25sp"
            android:padding="15dp"
            app:rd_enable="true"
            app:rd_cornerRadius="7dp"
            app:rd_rippleAnimDuration="300"
            app:rd_maxRippleRadius="match_view" />

    </LinearLayout>

</RelativeLayout>
